--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,8 @@ body {
 #webchat {
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
+  padding-top: 90px;
 }
 
 #webchat[watermark="true"] [role="complementary"] ul[role="list"]::after {
@@ -30,4 +32,21 @@ body {
   left: 50%;
   right: unset;
   transform: translate(-50%, 0);
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10000;
+  background: rgba(248, 248, 248, 1);
+  padding: 10px 60px;
+}
+
+.logo {
+  width: 300px;
+  height: 70px;
+  background-image: url("https://www.gmcs.ru/img/GMCS_svc_rus.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
